--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: email_otp
 description: A fast & simple email authentication OTP sender and verification flutter package.
-version: 3.0.2
+version: 3.1.0
 homepage: https://rohitchouhan.com
 repository: https://github.com/rohit-chouhan/email_otp
 
@@ -11,7 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.1
+  http: ^1.6.0
+  mailer: ^6.6.0
 
 dev_dependencies:
   flutter_test:
